--- a/PingTool/App.config
+++ b/PingTool/App.config
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <configuration>
   <appSettings>
-    <add key="IdentityClientId" value="set_your_client_id" />
+    <add key="IdentityClientId" value="195c30ba-6b3b-4660-af31-be4098c078ce" />
   </appSettings>
 </configuration>
