--- a/PingTool/PingTool.csproj
+++ b/PingTool/PingTool.csproj
@@ -142,6 +142,7 @@
     <Compile Include="Converters\TextColorConverter.cs" />
     <Compile Include="Helpers\AuthenticationHelper.cs" />
     <Compile Include="Helpers\EnumToBooleanConverter.cs" />
+    <Compile Include="Helpers\FileHelper.cs" />
     <Compile Include="Helpers\ImageHelper.cs" />
     <Compile Include="Helpers\NavHelper.cs" />
     <Compile Include="Helpers\Restricted.cs" />
