Fix workflow: use correct solution file for build
Updated SOLUTION_PATH in build-and-release.yml to reference the correct solution file, PingTool.WinUI3.sln, instead of the non-existent Ping-Tool.sln. Added WORKFLOW_FIX.md to document the issue, root cause, and resolution steps. This ensures the GitHub Actions workflow builds and releases the intended WinUI3 project.

--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -12,7 +12,7 @@ on:
 env:
   DOTNET_VERSION: '8.0.x'
   PROJECT_PATH: 'PingTool.WinUI3/PingTool.WinUI3.csproj'
-  SOLUTION_PATH: 'Ping-Tool.sln'
+  SOLUTION_PATH: 'PingTool.WinUI3.sln'
 
 jobs:
   build-msix-bundle:
